# Synth-home

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml  run.py  start.bat
alembic/: env.py
alembic/versions/: 0ae4f6328ad0_add_device_last_command.py  2a19e6b76e6f_scenario_actions_array.py  2c90706fe739_add_panel_nodegraph_models.py  4e0e90030bd4_fix_graph_node_connection_composite_pk.py  6d15cf0ee0f1_add_devices_table.py  aaa5a4060395_normalize_scenario_schema.py  d0011bc29292_migrate_device_to_multi_endpoint_.py  d101f515302b_initial_migration.py  dafec90e94da_add_scenario_sort_order.py
app/: __init__.py  config.py  db.py  dependencies.py  exceptions.py  main.py  scheduler_engine.py
app/middleware/: __init__.py  logging.py  rate_limit.py  security_headers.py
app/models/: __init__.py  db_models.py  node_schemas.py  panel_schemas.py  scenario_config.py  schemas.py
app/repositories/: __init__.py  base.py  device.py  device_alias.py  graph.py  panel.py  scenario.py
app/routers/: __init__.py  connection.py  devices.py  graphs.py  network.py  node_registry.py  panels.py  scenarios.py
app/services/: __init__.py  event_bus.py  graph_executor.py  hub_client.py  hub_service.py  (+6 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
static/: app.js
templates/: index.html
tests/: conftest.py  test_connection.py  test_devices.py  test_graph_executor.py  test_hub_client.py  test_node_registry.py  test_panel_state.py  test_panel_triggers.py  test_panels.py  test_scenarios.py  test_sse_manager.py
(+21 files in other folders)
